style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* =======CSS STARTS HERE===================================================================================================
*/ 

body {
    display:flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.header {
    height: 5vh;
    background-color: aqua;
    font-size: 4vh;
    padding: 30px;
    font-weight: bolder;
    display: flex;
    justify-content: space-between;
}

#newBookButton {
    padding: 10px;
    background-color: blanchedalmond;
}

.bookList {
    height: 80%;
    background-color: coral;
    padding: 3vw;
    display: grid;
    grid-template-columns: repeat(auto-fit, 290px);
    grid-auto-rows: minmax(280px, auto);  /*allows the height to grow automatically of the div if needed*/
    column-gap: 60px;
}

/*Following declarations after for the card section*/
.bookCard {
    height: 25vh;
    background-color: antiquewhite;
    width: 290px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 10px 15px 10px 15px; /*top, right, bottom, left*/
    border-radius: 30px;
    box-shadow: 0px 5px 10px grey;
    font-size: 18px;
}

.cardTitle {
    font-size: 20px;
    font-weight: bold;
}

.cardOptions {
    display: flex;
    justify-content: space-between;
    padding-right: 10px;
}



.footer {
    height: 5vh;
    font-size: 15px;
    background-color: cornflowerblue;
}

.popup {
    width: 400px;
    background: white;
    border-radius: 6px;
    position: absolute;
    top: 20px; /* starting points for the scaled down popup div*/
    right: 20px;
    transform: translate(100%, 0%) scale(0.1); /*(x, y coordinates) remember top left corner is 0,0 */
    text-align: center;
    padding: 20px;
    visibility: hidden;
    transition: transform 0.4s, top 0.5s, right 0.4s;
}

.open-popup {
    visibility: visible;
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%) scale(1);
}

